--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@algolia/client-search": "^4.13.1",
+    "@astrojs/markdown-remark": "^2.0.1",
     "@astrojs/mdx": "^0.17.2",
     "@astrojs/preact": "^2.0.3",
     "@astrojs/react": "^2.0.2",
@@ -24,6 +25,8 @@
     "preact": "^10.7.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.1.0",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
