--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "rehype-autolink-headings": "^6.1.1",
+    "rehype-katex": "^6.0.2",
     "rehype-slug": "^5.1.0",
-    "tailwindcss": "^3.2.7"
+    "remark-math": "^5.1.1",
+    "tailwindcss": "^3.2.7",
+    "three": "^0.150.1"
   },
   "devDependencies": {
     "html-escaper": "^3.0.3"
