--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^17.0.45",
     "@types/react-dom": "^18.0.0",
     "astro": "^2.0.17",
+    "fast-xml-parser": "^4.1.3",
     "katex": "^0.16.4",
     "preact": "^10.7.3",
     "react": "^18.1.0",
