--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
     "react-dom": "^18.1.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-katex": "^6.0.2",
+    "rehype-remark": "^9.1.2",
     "rehype-slug": "^5.1.0",
     "remark-math": "^5.1.1",
+    "remark-parse": "^10.0.1",
+    "remark-stringify": "^10.0.2",
     "tailwindcss": "^3.2.7",
-    "three": "^0.150.1"
+    "three": "^0.150.1",
+    "unified": "^10.1.2"
   },
   "devDependencies": {
     "html-escaper": "^3.0.3"
