--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rehype-katex": "^6.0.2",
     "rehype-remark": "^9.1.2",
     "rehype-slug": "^5.1.0",
+    "remark-breaks": "^3.0.3",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "remark-parse": "^10.0.1",
@@ -41,6 +42,7 @@
     "unified": "^10.1.2"
   },
   "devDependencies": {
-    "html-escaper": "^3.0.3"
+    "html-escaper": "^3.0.3",
+    "tailwind-scrollbar": "^3.0.5"
   }
 }
