--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "astro": "^2.0.17",
     "astro-auto-import": "^0.2.1",
     "fast-xml-parser": "^4.1.3",
+    "jsxgraph": "^1.6.0",
     "katex": "^0.16.4",
     "preact": "^10.7.3",
     "react": "^18.1.0",
