--- a/package.json
+++ b/package.json
@@ -10,19 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@algolia/client-search": "^4.13.1",
-    "@astrojs/markdown-remark": "^2.0.1",
-    "@astrojs/mdx": "^0.17.2",
+    "@astrojs/mdx": "^1.1.0",
     "@astrojs/preact": "^2.0.3",
-    "@astrojs/react": "^2.0.2",
-    "@astrojs/tailwind": "^3.0.1",
+    "@astrojs/react": "^3.0.2",
+    "@astrojs/tailwind": "^5.0.0",
     "@docsearch/css": "^3.1.0",
     "@docsearch/react": "^3.1.0",
     "@types/node": "^18.0.0",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^18.0.0",
-    "astro": "^2.0.17",
-    "astro-auto-import": "^0.2.1",
+    "astro": "^3.1.0",
+    "astro-auto-import": "^0.3.1",
+    "astrojs": "^0.1.3",
     "fast-xml-parser": "^4.1.3",
     "jsxgraph": "^1.6.0",
     "katex": "^0.16.4",
@@ -38,12 +37,12 @@
     "remark-math": "^5.1.1",
     "remark-parse": "^10.0.1",
     "remark-stringify": "^10.0.2",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.2.7",
     "three": "^0.150.1",
     "unified": "^10.1.2"
   },
   "devDependencies": {
-    "html-escaper": "^3.0.3",
-    "tailwind-scrollbar": "^3.0.5"
+    "html-escaper": "^3.0.3"
   }
 }
