--- a/package.json
+++ b/package.json
@@ -10,24 +10,25 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/markdown-remark": "^3.2.0",
     "@astrojs/mdx": "^1.1.0",
-    "@astrojs/preact": "^2.0.3",
+    "@astrojs/preact": "^3.0.0",
     "@astrojs/react": "^3.0.2",
     "@astrojs/tailwind": "^5.0.0",
     "@docsearch/css": "^3.1.0",
     "@docsearch/react": "^3.1.0",
     "@types/node": "^18.0.0",
-    "@types/react": "^17.0.45",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
     "astro": "^3.1.0",
     "astro-auto-import": "^0.3.1",
     "astrojs": "^0.1.3",
     "fast-xml-parser": "^4.1.3",
     "jsxgraph": "^1.6.0",
     "katex": "^0.16.4",
-    "preact": "^10.7.3",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "preact": "^10.17.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-katex": "^6.0.2",
     "rehype-remark": "^9.1.2",
