--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.2.7",
     "three": "^0.150.1",
+    "uglify-js": "^3.17.4",
     "unified": "^10.1.2"
   },
   "devDependencies": {
