--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rehype-autolink-headings": "^6.1.1",
+    "rehype-external-links": "^3.0.0",
     "rehype-katex": "^6.0.2",
     "rehype-remark": "^9.1.2",
     "rehype-slug": "^5.1.0",
