--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "rehype-external-links": "^3.0.0",
     "rehype-katex": "^6.0.2",
     "rehype-remark": "^9.1.2",
-    "rehype-slug": "^5.1.0",
     "remark-breaks": "^3.0.3",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
@@ -49,6 +48,8 @@
   "devDependencies": {
     "@astrojs/prism": "^3.0.0",
     "astro-mdx-code-blocks": "^0.0.6",
-    "html-escaper": "^3.0.3"
+    "html-escaper": "^3.0.3",
+    "rehype-slug": "^6.0.0",
+    "remark-capitalize-headings": "^2.0.1"
   }
 }
