--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@astrojs/prism": "^3.0.0",
     "astro-mdx-code-blocks": "^0.0.6",
     "html-escaper": "^3.0.3",
+    "rehype-citation": "^2.1.2",
     "rehype-slug": "^6.0.0",
     "remark-capitalize-headings": "^2.0.1"
   }
