--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/markdown-remark": "^3.2.0",
-    "@astrojs/mdx": "^1.1.0",
-    "@astrojs/node": "^6.0.0",
-    "@astrojs/preact": "^3.0.0",
-    "@astrojs/react": "^3.0.2",
-    "@astrojs/tailwind": "^5.0.0",
+    "@astrojs/markdown-remark": "^6.0.1",
+    "@astrojs/mdx": "^4.0.3",
+    "@astrojs/node": "^9.0.0",
+    "@astrojs/preact": "^4.0.1",
+    "@astrojs/react": "^4.1.2",
+    "@astrojs/tailwind": "^5.1.4",
     "@benrbray/rehype-cite": "^2.0.1-alpha.5",
     "@docsearch/css": "^3.1.0",
     "@docsearch/react": "^3.1.0",
     "@types/node": "^18.0.0",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
-    "astro": "^3.1.0",
-    "astro-auto-import": "^0.3.1",
-    "astrojs": "^0.1.3",
+    "astro": "^5.1.1",
+    "astro-auto-import": "^0.4.4",
+    "astrojs": "^0.1.1",
     "fast-xml-parser": "^4.1.3",
     "jsxgraph": "^1.6.0",
     "katex": "^0.16.4",
@@ -36,19 +36,20 @@
     "rehype-katex": "^6.0.2",
     "rehype-remark": "^9.1.2",
     "remark-breaks": "^3.0.3",
-    "remark-gfm": "^3.0.1",
+    "remark-gfm": "^4.0.0",
     "remark-math": "^5.1.1",
+    "remark-mdx": "^3.1.0",
     "remark-parse": "^10.0.1",
     "remark-stringify": "^10.0.2",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.2.7",
     "three": "^0.150.1",
     "uglify-js": "^3.17.4",
-    "unified": "^10.1.2",
+    "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
-    "@astrojs/prism": "^3.0.0",
+    "@astrojs/prism": "^3.2.0",
     "astro-mdx-code-blocks": "^0.0.6",
     "html-escaper": "^3.0.3",
     "rehype-citation": "^2.1.2",
