--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/preact": "^4.0.1",
     "@astrojs/react": "^4.1.2",
     "@astrojs/tailwind": "^5.1.4",
+    "@astrojs/vercel": "^8.0.1",
     "@benrbray/rehype-cite": "^2.0.1-alpha.5",
     "@docsearch/css": "^3.1.0",
     "@docsearch/react": "^3.1.0",
