--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-compiler-runtime": "^19.0.0-beta-b2e8e9c-20241220",
     "react-dom": "^18.2.0",
     "rehype-autolink-headings": "^6.1.1",
+    "rehype-citation": "^2.2.2",
     "rehype-external-links": "^3.0.0",
     "rehype-katex": "^6.0.2",
     "rehype-remark": "^9.1.2",
@@ -43,6 +44,7 @@
     "remark-math": "^6.0.0",
     "remark-mdx": "^3.1.0",
     "remark-parse": "^10.0.1",
+    "remark-rehype": "^11.1.1",
     "remark-stringify": "^10.0.2",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.2.7",
@@ -56,7 +58,6 @@
     "@astrojs/prism": "^3.2.0",
     "astro-mdx-code-blocks": "^0.0.6",
     "html-escaper": "^3.0.3",
-    "rehype-citation": "^2.1.2",
     "rehype-slug": "^6.0.0",
     "remark-capitalize-headings": "^2.0.1"
   }
