--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "three": "^0.150.1",
     "uglify-js": "^3.17.4",
     "unified": "^11.0.5",
+    "unist-util-find": "^3.0.0",
     "unist-util-visit": "^5.0.0",
     "vite": "^6.0.6"
   },
