--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "^8.2.2",
     "@benrbray/rehype-cite": "^2.0.1-alpha.5",
+    "@daiji256/rehype-mathml": "^1.2.1",
     "@docsearch/css": "^3.1.0",
     "@docsearch/react": "^3.1.0",
     "@mdx-js/rollup": "^3.1.0",
@@ -27,6 +28,7 @@
     "astro-auto-import": "^0.4.4",
     "astrojs": "^0.1.1",
     "fast-xml-parser": "^4.1.3",
+    "hast-util-select": "^6.0.4",
     "jsxgraph": "^1.6.0",
     "katex": "^0.16.4",
     "preact": "^10.17.1",
@@ -51,6 +53,7 @@
     "uglify-js": "^3.17.4",
     "unified": "^11.0.5",
     "unist-util-find": "^3.0.0",
+    "unist-util-inspect": "^8.1.0",
     "unist-util-visit": "^5.0.0",
     "vite": "^6.0.6"
   },
